--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <canvas id="bargraphcreation" width="500px" height="200px"></canvas>
     </form>
     <footer style="text-align: center;">
-        <p>&copy; KRUTHIK B 2023 (V_5718) | <a href="">GitHub</p>
+        <p>&copy; KRUTHIK B 2023 (V_5718) | <a href="https://github.com/Kruthik71/Survey">GitHub</p>
     </footer>
 </body>
 </html>
